--- a/css/style.css
+++ b/css/style.css
@@ -398,10 +398,7 @@ padding: 40px;
   .faq-text {
       display: none;
   }
-  .container {
-    width: 1200px;
-    margin: auto;
-  }
+
   .art-box svg {
     width:100%;
   }
@@ -452,3 +449,86 @@ padding: 40px;
   .f-section .col-md-3 {
       margin-top: 30px;
   }
+  .fco {
+    padding-top: 80px;
+}
+
+  /* mobile css START herer =====================================*/
+@media (max-width: 767px) {
+    .big-pipe {
+        width: 100%;
+    }
+    .jumbotron-heading {
+        font-size: 36px;
+    }
+    .roadmap-section {
+        overflow: hidden;
+    }
+    .about-section  {
+        overflow: hidden;
+
+    }
+    .alita {
+        width: 100%;
+        margin-left: 0;
+        position: relative;
+        z-index: 100;
+}
+.the-content .lead {
+    font-size: 16px;
+    text-align: center;
+}
+
+.asfo {
+    background: url(../img/asfo.png);
+    width: 100%;
+    height: 333px;
+    background-position-x: center;
+    background-position-y: 80px;
+    background-color: #ff000000;
+    position: absolute;
+    left: 0;
+    /* top: 270px; */
+    bottom: -171px;
+    z-index: 1;
+    background-repeat: no-repeat;
+    /* padding-top: 50px; */
+    background-size: 120%;
+}
+.f-section {
+    position: relative;
+    margin-top: 160px;
+}
+
+.fco {
+    padding-top: 0px;
+
+}
+.title {
+  margin-bottom: 10px;
+  font-size: 30px;
+}
+.boy {
+    display: none;
+}
+.b-circle {
+    position: absolute;
+        top: 16px;
+        width: 122px !important;
+        z-index: 10;
+        left: -50px;
+}
+.lead {
+    font-size: 16px;
+}
+.g-box {
+    margin-bottom: 20px;
+}
+.c1 {
+    position: absolute;
+    left: 243px;
+    top: -46px;
+    z-index: 1;
+    width: 123px;
+}
+}
