--- a/css/style.css
+++ b/css/style.css
@@ -211,7 +211,10 @@ border-radius: 8px;
   border-style: solid;
   border-image: linear-gradient(to bottom, red, rgba(0, 0, 0, 0)) 1 100%;
   }
-  
+  .fco {
+    padding-top: 0;
+}
+
   .module {
     background: #222;
     color: white;
