--- a/css/style.css
+++ b/css/style.css
@@ -83,12 +83,13 @@ border-radius: 8px;
     padding-left: 1rem;
     color: #fff;
 }
+
 .asfo {
     background: url(../img/asfo.png);
     width: 100%;
     height: 500px;
     background-position-x: center;
-    background-position-y: 0px;
+    background-position-y: 50px;
     background-color: #ff000000;
     left: 0;
     /* top: 270px; */
@@ -98,8 +99,16 @@ border-radius: 8px;
     padding-top: 50px;
   
 }
-.asfo img {
-    width: 100%;
+.swiper-loop .swiper-slide img {
+    width: 170px;
+}
+.swiper-loop {
+    transform: rotate(-6deg);
+    margin-top: 90px;
+}
+.swiper-loop .swiper-wrapper {
+    display: flex;
+    align-items: center;
 }
 .title {
 
@@ -375,7 +384,19 @@ padding: 40px;
     height: 40px;
     background-repeat: no-repeat;
   }
-  
+
+  .faq-list .the-active .faq-heading::before {
+    content: '';
+    background: url(../img/minus.png);
+    position: absolute;
+    right: -6px;
+    top: -10px;
+    background-size: 40px;
+    width: 40px;
+    height: 40px;
+    background-repeat: no-repeat;
+}
+
 
   
   .faq-heading {
@@ -414,10 +435,16 @@ padding: 40px;
     left: 0;
     top: -100px;
   }
+  .b-circle {
+ position: absolute;
+ top: -40%;
+    width: 269px;
+    z-index: 10;
+    left: -50px;
+  }
   .c3 {
     position: absolute;
-    /* left: 0; */
-    top: -80px;
+    top: -52%;
     right: -60px;
     z-index: 1;
     width: 150px;
@@ -425,7 +452,7 @@ padding: 40px;
   .c1 {
     position: absolute;
     left: 134px;
-    top: 0;
+    top: 200%;
     z-index: 1;
     width: 170px;
   }
@@ -458,6 +485,20 @@ padding: 40px;
         left: 0;
         right: 0;
         margin: auto;
+}
+.fixed {
+    position: fixed;
+    width: 100%;
+    z-index: 50000;
+    left: 0;
+    top: 0;
+}
+.sticky-header {
+    position: fixed;
+    width: 100%;
+    z-index: 50000;
+    left: 0;
+    top: 0;
 }
 
 
@@ -501,6 +542,7 @@ padding: 40px;
     background-repeat: no-repeat;
     /* padding-top: 50px; */
     background-size: 120%;
+    overflow: hidden;
 }
 
 
