--- a/css/style.css
+++ b/css/style.css
@@ -11,6 +11,7 @@ body {
     width: 100%;
     height: 80vh;
     position: relative;
+    z-index: 100;
 }
 .f-section {
     margin-top: -150px;
@@ -507,6 +508,24 @@ padding: 40px;
     .big-pipe {
         width: 100%;
     }
+    .swiper-loop .swiper-slide img {
+        width: 100px;
+    }
+    .swiper-loop {
+        margin-top: 82px;
+    }
+    .fade-c {
+        margin-top: -40px !important;
+    }
+   .f-section {
+        margin-top: -60px;
+}
+.asfo > .title {
+    top: 20px;
+}
+.fade {
+    top: -10px !important;
+}
     .jumbotron-heading {
         font-size: 36px;
     }
@@ -541,7 +560,7 @@ padding: 40px;
     z-index: 1;
     background-repeat: no-repeat;
     /* padding-top: 50px; */
-    background-size: 120%;
+    background-size: 250%;
     overflow: hidden;
 }
 
