--- a/css/style.css
+++ b/css/style.css
@@ -301,13 +301,18 @@ padding: 40px;
 
   }
   .team-img {
-    width: 80px;
-    margin: auto;
-    margin-top: 20px;
+    width: 95px;
+    height: 95px;
+    margin: 8px auto auto;
+    border-radius: 50%;
+    object-fit: cover;
   }
   .team-section .card {
-      text-align: center;
-  }
+    text-align: center;
+    height: 94%;
+}
+
+ 
   .team-section .card-text {
     color: #f6f6f6;
     font-weight: 300;
@@ -453,7 +458,7 @@ padding: 40px;
   .c1 {
     position: absolute;
     left: 134px;
-    top: 200%;
+    top: 160%;
     z-index: 1;
     width: 170px;
   }
