--- a/css/style.css
+++ b/css/style.css
@@ -539,11 +539,14 @@ padding: 40px;
 .asfo-container {
     position: relative;
 }
-.asfo-container::before {
+.hero-section::before {
     content: "";
     width: 100%;
-    height: 300px;
-    background: black;
+    height: 70px;
+    background: linear-gradient(359deg, black, transparent);
+    position: absolute;
+    bottom: 0;
+    z-index: 1;
 }
 
   /* mobile css START herer =====================================*/
