--- a/css/style.css
+++ b/css/style.css
@@ -554,6 +554,26 @@ padding: 40px;
     .big-pipe {
         width: 100%;
     }
+    #copyText1 {
+        font-size: 11px;
+        margin-bottom: 10px;
+        text-align: center;
+    }
+    .token-list li h4 {
+        font-size: 14px;
+    }
+    .token-list li  {
+        border: 1px solid #fff;
+    }
+    .visioin-section {
+        overflow: hidden;
+    }
+
+    .copy-box {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+}
     .asfo-img {
         top: 146px;
     }
